Clarify run parameters